Login with Spotify good, brings you back to login page rn if you don't successfully login

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "spotify-web-api-js": "^1.5.1",
     "styled-components": "^5.2.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
